--- a/LocadoraDevmedia/LocadoraDevmedia.csproj
+++ b/LocadoraDevmedia/LocadoraDevmedia.csproj
@@ -197,6 +197,7 @@
     </Compile>
     <Compile Include="Models\DataAccess.cs" />
     <Compile Include="Models\Filme.cs" />
+    <Compile Include="Models\MongoConnectionHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
